kubernetes/apps/observability/victoria/logs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: kantai
    app.kubernetes.io/name: vlsingle
  name: vlsingle-kantai
spec:
  hostnames:
    - val.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vlsingle-kantai
          port: 9428
